# hikari-simple-global-chat

./: .gitignore  CONTRIBUTING.md  README.md  config.template.toml  pyproject.toml
src/: __init__.py  __main__.py  utils.py
src/components/: admin.py  general.py  logic.py
src/core/: __init__.py  config.py  state.py
