[project]
name = "simple-global-chat"
description = "hikariを使ったシンプルなDiscord用グローバルチャットBotプログラム"
authors = [
    {name = "Takagi Tasuku", email = "tasuren@outlook.jp"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Private :: Do Not Upload",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "hikari[speedups]>=2.0.0.dev120",
    "hikari-tanjun>=2.17.0",
    "alluka>=0.1.3",
    "pydantic-settings>=2.0.3",
    "pydantic>=2.3.0",
    "more-itertools>=10.1.0",
]
optional-dependencies = { fast = ["uvloop"] }
requires-python = ">=3.11,<3.12"
dynamic = ["version"]

[tool.pdm]
version = {source = "file", path = "src/simple_global_chat/__init__.py"}

[project.urls]
Source = "https://github.com/tasuren/hikari-simple-global-chat"
Donate = "https://www.buymeacoffee.com/tasuren"
Chat = "https://discord.gg/kfMwZUyGFG"

[tool.pdm.dev-dependencies]
dev = [
    "pyright>=1.1.325",
    "black>=23.7.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv"]
typingCheckingMode = "strict"
